--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,29 @@
+@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap");
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+@theme {
+  --font-outfit: "Outfit", sans-serif;
+  --color-primary: #eb224d;
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+@utility container {
+  margin-inline: auto;
+  padding-inline: 2rem;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+.menu {
+  @apply bg-[rgba(0,0,0,0.6)] backdrop-blur-[50px] p-2 border border-[#535353] rounded-full;
 }
 
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+.menu > ul {
+  @apply flex justify-between items-center gap-3;
+}
+
+.menu > ul > li > a {
+  @apply border border-transparent rounded-full max-xl:px-3 px-5 py-1 flex items-center max-xl:text-sm;
+}
+
+.menu > ul > li a.active,
+.menu > ul > li a:hover {
+  @apply border border-[rgb(114,28,52)] bg-[rgba(33,33,33,1)] rounded-full max-xl:px-3 px-5 py-1;
 }
