--- a/app/globals.css
+++ b/app/globals.css
@@ -14,6 +14,10 @@
   padding-inline: 2rem;
 }
 
+body {
+  @apply text-xl;
+}
+
 .menu {
   @apply bg-[rgba(0,0,0,0.6)] backdrop-blur-[50px] p-2 border border-gray rounded-full;
 }
@@ -52,9 +56,9 @@
 }
 
 header {
-  @apply h-[var(--header-height)] flex items-center fixed top-0 w-full z-20;
+  @apply max-lg:h-[var(--mobile-header-height)] lg:h-[var(--header-height)] flex items-center fixed top-0 w-full z-20;
 }
 
 .glance-box {
-  @apply border border-gray rounded-2xl bg-[#0E0E0E80] p-5 backdrop-blur-[40px] text-center flex flex-col items-center justify-center;
+  @apply border border-gray rounded-2xl bg-[#0E0E0E80] p-7 backdrop-blur-[40px] text-center flex flex-col gap-7 items-center;
 }
