--- a/app/globals.css
+++ b/app/globals.css
@@ -63,6 +63,10 @@ header {
   @apply border border-gray rounded-2xl bg-[#0E0E0E80] p-7 backdrop-blur-[40px] text-center flex flex-col gap-7 items-center;
 }
 
+.gray-border-box {
+  @apply border border-gray rounded-2xl bg-[#0E0E0E80] p-10 backdrop-blur-[40px] overflow-hidden;
+}
+
 .red-box {
   @apply bg-[linear-gradient(90.31deg,_#520011_24.83%,_#EB224D_125.02%)] p-2 rounded-2xl w-[53px] h-[53px] flex items-center justify-center shrink-0;
 }
@@ -86,4 +90,21 @@ header {
     rgba(51, 51, 51, 0.5) 29.81%,
     rgba(0, 0, 0, 0.5) 50%
   );
+}
+
+::placeholder {
+  color: #8a8a8a;
+  opacity: 1; /* Ensures full opacity on all browsers */
+}
+
+/* Optional for better cross-browser support */
+::-webkit-input-placeholder {
+  color: #8a8a8a;
+}
+:-ms-input-placeholder {
+  color: #8a8a8a;
+}
+
+select {
+  color: #8a8a8a;
 }
